use TableViewer instead of Table

--- a/src/net/optm/messages.properties
+++ b/src/net/optm/messages.properties
@@ -1,4 +1,6 @@
-BettingScheduleView_10=Small Blind
+#Eclipse modern messages class
+#Sun Jan 12 22:12:16 CET 2014
+BettingScheduleView_10=Big Blind
 BettingScheduleView_11=Duration
 BettingScheduleView_8=Level
-BettingScheduleView_9=Big Blind
+BettingScheduleView_9=Small Blind
