Implemented RepositoryView with dummy content.

--- a/OSGI-INF/l10n/bundle.properties
+++ b/OSGI-INF/l10n/bundle.properties
@@ -8,4 +8,4 @@ menu.label.1 = File
 handledmenuitem.label.1 = Exit
 command.commandname.1 = exit
 
-part.label.2 = Components
+part.label.2 = Repository
