--- a/src/net/optm/messages.properties
+++ b/src/net/optm/messages.properties
@@ -1,5 +1,7 @@
+BettingSchedules_1=clock.png
 #Eclipse modern messages class
 #Sun Jan 12 22:12:16 CET 2014
+BettingSchedules_0=Betting Schedules
 BettingScheduleView_1=Level
 BettingScheduleView_2=Small Blind
 BettingScheduleView_3=Big Blind
