Added help menu dummy

--- a/OSGI-INF/l10n/bundle_de.properties
+++ b/OSGI-INF/l10n/bundle_de.properties
@@ -9,3 +9,6 @@ handledmenuitem.label.1 = Exit
 command.commandname.1 = exit
 
 part.label.2 = Komponenten
+
+menu.label.2 = Hilfe
+directmenuitem.label.1 = Über
