--- a/OSGI-INF/l10n/bundle.properties
+++ b/OSGI-INF/l10n/bundle.properties
@@ -9,3 +9,6 @@ handledmenuitem.label.1 = Exit
 command.commandname.1 = exit
 
 part.label.2 = Repository
+
+menu.label.2 = Help
+directmenuitem.label.1 = About
