renamed keys for menu labels and commands to be consistent with their IDs.

--- a/OSGI-INF/l10n/bundle.properties
+++ b/OSGI-INF/l10n/bundle.properties
@@ -4,11 +4,11 @@ Bundle-Name = Optm
 window.label.1 = Open Poker Tournament Manager
 perspective.label.1 = Tournament
 part.label.1 = Betting Schedule
-menu.label.1 = File
-handledmenuitem.label.1 = Exit
-command.commandname.1 = exit
+optm.menu.file_label = File
+optm.menu.file.exit_label = Exit
+optm.command.exit_commandname = exit
 
 part.label.2 = Repository
 
-menu.label.2 = Help
-directmenuitem.label.1 = About
+optm.menu.help_label = Help
+optm.menu.help.about_label = About
