--- a/OSGI-INF/l10n/bundle_de.properties
+++ b/OSGI-INF/l10n/bundle_de.properties
@@ -4,11 +4,11 @@ Bundle-Name = Optm
 window.label.1 = Open Poker Tournament Manager
 perspective.label.1 = Tournament
 part.label.1 = Betting Schedule
-menu.label.1 = File
-handledmenuitem.label.1 = Exit
-command.commandname.1 = exit
+optm.menu.file_label = Datei
+optm.menu.file.exit_label = Beenden
+optm.command.exit_commandname = exit
 
 part.label.2 = Komponenten
 
-menu.label.2 = Hilfe
-directmenuitem.label.1 = Über
+optm.menu.help_label = Hilfe
+optm.menu.help.about_label = Über
