--- a/OSGI-INF/l10n/bundle_de.properties
+++ b/OSGI-INF/l10n/bundle_de.properties
@@ -8,7 +8,7 @@ optm.menu.file_label = Datei
 optm.menu.file.exit_label = Beenden
 optm.command.exit_commandname = exit
 
-part.label.2 = Komponenten
+part.label.2 = Repository
 
 optm.menu.help_label = Hilfe
 optm.menu.help.about_label = Über
