--- a/src/net/optm/messages.properties
+++ b/src/net/optm/messages.properties
@@ -3,3 +3,4 @@ BettingScheduleView_1=Level
 BettingScheduleView_2=Small Blind
 BettingScheduleView_3=Big Blind
 BettingScheduleView_4=Duration
+Players_0=Spieler
