--- a/optm/bin/net/optm/messages.properties
+++ b/optm/bin/net/optm/messages.properties
@@ -1,6 +1,2 @@
 BettingSchedules_0=Betting Schedules
-BettingScheduleView_1=Level
-BettingScheduleView_2=Small Blind
-BettingScheduleView_3=Big Blind
-BettingScheduleView_4=Duration
-Players_0=Spieler
+Players_0=Players
