--- a/optm/bin/net/optm/messages_de.properties
+++ b/optm/bin/net/optm/messages_de.properties
@@ -1,5 +1,2 @@
 BettingSchedules_0=Levels
-BettingScheduleView_1=Level
-BettingScheduleView_2=Small Blind
-BettingScheduleView_3=Big Blind
-BettingScheduleView_4=Dauer
+Players_0=Spieler
