reworked BettingScheduleView to use Content- and LabelProvider

--- a/BettingSchedule/src/net/optm/bettingschedule/messages.properties
+++ b/BettingSchedule/src/net/optm/bettingschedule/messages.properties
@@ -1,4 +1,8 @@
+#Eclipse modern messages class
+#Wed Jan 29 21:54:29 CET 2014
+BettingScheduleView_ante=Ante
 BettingScheduleView_big_blind=Big Blind
 BettingScheduleView_duration=Duration
 BettingScheduleView_level=Level
 BettingScheduleView_small_blind=Small Blind
+BettingScheduleView_tltmNewItem_toolTipText=add new level
