--- a/BettingSchedule/src/net/optm/bettingschedule/messages_de.properties
+++ b/BettingSchedule/src/net/optm/bettingschedule/messages_de.properties
@@ -1,3 +1,4 @@
+BettingScheduleView_ante=Ante
 BettingScheduleView_big_blind=Big Blind
 BettingScheduleView_duration=Dauer
 BettingScheduleView_level=Level
