externalized validation messages.

--- a/BettingSchedule/src/net/optm/bettingschedule/messages.properties
+++ b/BettingSchedule/src/net/optm/bettingschedule/messages.properties
@@ -6,3 +6,5 @@ BettingScheduleView_duration=Duration
 BettingScheduleView_level=Level
 BettingScheduleView_small_blind=Small Blind
 BettingScheduleView_tltmNewItem_toolTipText=add new level
+LevelEditingSupport_0=Must not be negative
+LevelEditingSupport_1=Not a valid integer
