--- a/BettingSchedule/src/net/optm/bettingschedule/messages_de.properties
+++ b/BettingSchedule/src/net/optm/bettingschedule/messages_de.properties
@@ -3,3 +3,5 @@ BettingScheduleView_big_blind=Big Blind
 BettingScheduleView_duration=Dauer
 BettingScheduleView_level=Level
 BettingScheduleView_small_blind=Small Blind
+LevelEditingSupport_0=darf nicht negativ sein
+LevelEditingSupport_1=nicht ganzzahlig
